--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body{
 #reg{
   background-color: blueviolet;
   border: 2px solid;
+  padding: 5px;
   height: auto;
   border-radius: 10px;
   box-shadow: 5px 5px 15px;
